# profipp

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  build_and_install_debug.sh  build_and_install_release.sh
examples/profiecho/: CMakeLists.txt
examples/profiecho/resources/: ProfiEcho.zap17
examples/profiecho/src/: EchoControl.cpp  EchoControl.h  profiecho.cpp
examples/profizumo/: CMakeLists.txt  README.md
examples/profizumo/resources/: ProfiZumo.zap17  Profizumo.zap17  profizumo.zap17
examples/profizumo/resources/ZumoControl/: ZumoControl.ino
examples/profizumo/resources/profizumo/: LICENSE  ProfizumoDevice.cpp  ProfizumoDevice.h  ProfizumoEncoders.cpp  ProfizumoEncoders.h  ProfizumoImu.cpp  ProfizumoImu.h  ProfizumoMotors.cpp  ProfizumoMotors.h  ProfizumoSupersonic.cpp  ProfizumoSupersonic.h  README.md  ZumoController.cpp  ZumoController.h  ZumoDevice.cpp  ZumoDevice.h  profizumo.ino  zumocom.h
examples/profizumo/src/: SerialConnection.cpp  SerialConnection.h  ZumoControl.cpp  ZumoControl.h  profizumo.cpp
osal/: CMakeLists.txt
osal/cmake/: Linux.cmake
osal/cmake/tools/: AddOsal.cmake
pnet/: CMakeLists.txt
pnet/cmake/: Linux.cmake
pnet/include/: pnal_sys.h  pnet_api.h
pnet/src/: CMakeLists.txt
pnet/src/ports/linux/: pnal.c  pnal_eth.c
profipp/: CMakeLists.txt  profipp-config-version.cmake.in  profipp-config.cmake
profipp/include/: ConsoleLogger.h  Device.h  DeviceProperties.h  FileLogger.h  Input.h  InputProperties.h  Logger.h  Module.h  ModuleProperties.h  Output.h  OutputProperties.h  Parameter.h  ParameterProperties.h  Profinet.h  ProfinetProperties.h  Submodule.h  SubmoduleProperties.h  gsdmltools.h  helperfunctions.h  logging.h  standardconversions.h
profipp/src/: ConsoleLogger.cpp  Device.cpp  DeviceInstance.cpp  DeviceInstance.h  FileLogger.cpp  Input.cpp  InputInstance.cpp  InputInstance.h  Module.cpp  ModuleInstance.cpp  ModuleInstance.h  Output.cpp  OutputInstance.cpp  OutputInstance.h  Parameter.cpp  ParameterInstance.cpp  ParameterInstance.h  Profinet.cpp  ProfinetInternal.cpp  ProfinetInternal.h  Submodule.cpp  SubmoduleInstance.cpp  SubmoduleInstance.h  dapModule.cpp  dapModule.h  easylogging.cc  gsdmltools.cpp  networktools.cpp  networktools.h
scripts/: build_debug.sh  build_release.sh  start_profiecho.sh  start_profizumo.sh  valgring_profizumo.sh
